force-app/main/default/objects/Instalacao__c/Instalacao__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado Instalação.</description>
    <label>Instalação</label>
    <nameField>
        <label>Nome da Instalação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instalações</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>