force-app/main/default/objects/Instalacao__c/fields/AdequacaoPadraoPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>AdequacaoPadraoPlanejamento__c</fullName>
    <description>Status da adequação de padrão no checklist de planejamento.</description>
    <label>Adequação de Padrão (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>