force-app/main/default/objects/Instalacao__c/fields/CasoInstalacao__c.field-meta.xml
<CustomField>
    <fullName>CasoInstalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar instalação com caso.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Instalações</relationshipLabel>
    <relationshipName>Instalacoes</relationshipName>
    <type>Lookup</type>
</CustomField>