force-app/main/default/objects/Instalacao__c/fields/ClienteConta__c.field-meta.xml
<CustomField>
    <fullName>ClienteConta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relacionamento pesquisa para consultor em conta.</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instalações</relationshipLabel>
    <relationshipName>Instalacoes</relationshipName>
    <type>Lookup</type>
</CustomField>