force-app/main/default/objects/Instalacao__c/fields/ConsultorInstalacao__c.field-meta.xml
<CustomField>
    <fullName>ConsultorInstalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associação de instalação com consultor.</description>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Instalações</relationshipLabel>
    <relationshipName>Instalacoes</relationshipName>
    <type>Lookup</type>
</CustomField>