force-app/main/default/objects/Instalacao__c/fields/ContagemPrazoContrato__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazoContrato__c</fullName>
    <formula>IF(
    ISBLANK(BLANKVALUE(Oportunidade__r.CloseDate, OportunidadeConcluida__r.CloseDate)),
    NULL,
    CASE(
        IF(
            NOT(ISBLANK(Oportunidade__c)),
            TEXT(Oportunidade__r.Categoria__c),
            TEXT(OportunidadeConcluida__r.Categoria__c)
        ),
        &quot;Fast Track&quot;, 45,
        &quot;SCEE&quot;, 60,
        0
    ) - IF(
        ISBLANK(DataConclusao__c),
        TODAY() - BLANKVALUE(Oportunidade__r.CloseDate, OportunidadeConcluida__r.CloseDate),
        DataConclusao__c - BLANKVALUE(Oportunidade__r.CloseDate, OportunidadeConcluida__r.CloseDate)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contagem do Prazo (Contrato)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>