force-app/main/default/objects/Instalacao__c/fields/CustosAdicionaisPlanejado__c.field-meta.xml
<CustomField>
    <fullName>CustosAdicionaisPlanejado__c</fullName>
    <formula>0.8 * (
    BLANKVALUE(
        IF(
            NOT(ISBLANK(Oportunidade__c)),
            Oportunidade__r.Acoplamento__c,
            OportunidadeConcluida__r.Acoplamento__c
        ),
        0
    ) +
    BLANKVALUE(
        IF(
            NOT(ISBLANK(Oportunidade__c)),
            Oportunidade__r.CustoAdicional__c,
            OportunidadeConcluida__r.CustoAdicional__c
        ),
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custos Adicionais Planejado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>