force-app/main/default/objects/Instalacao__c/fields/CustosAdicionaisPrestador__c.field-meta.xml
<CustomField>
    <fullName>CustosAdicionaisPrestador__c</fullName>
    <label>Custos Adicionais do Prestador (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>