force-app/main/default/objects/Instalacao__c/fields/CustosAdicionaisRealizado__c.field-meta.xml
<CustomField>
    <fullName>CustosAdicionaisRealizado__c</fullName>
    <label>Custos Adicionais Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>