force-app/main/default/objects/Instalacao__c/fields/DataObraEmExecucao__c.field-meta.xml
<CustomField>
    <fullName>DataObraEmExecucao__c</fullName>
    <description>Data em que o Status da Instalação foi alterado para &quot;Obra em execução&quot;. Populado automaticamente por Flow. Usado no indicador Tempo Médio de Execução de Instalações (Engenharia).</description>
    <label>Data Início Obra em Execução</label>
    <type>Date</type>
</CustomField>