force-app/main/default/objects/Instalacao__c/fields/DataPrevisaoConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataPrevisaoConclusao__c</fullName>
    <description>Data prevista para conclusão da obra.</description>
    <label>Data de Previsão de Conclusão</label>
    <type>Date</type>
</CustomField>