force-app/main/default/objects/Instalacao__c/fields/DateInspection__c.field-meta.xml
<CustomField>
    <fullName>DateInspection__c</fullName>
    <label>Data de Aceite / Vistoria</label>
    <type>DateTime</type>
</CustomField>