force-app/main/default/objects/Instalacao__c/fields/DiasAtePlanejamento__c.field-meta.xml
<CustomField>
    <fullName>DiasAtePlanejamento__c</fullName>
    <description>Tempo em dias corridos entre a criação da Instalação e a Data de Início da Instalação (obra agendada). Usado no indicador Tempo Médio de Planejamento de Instalações (Engenharia).</description>
    <formula>IF(!ISBLANK(InstallDate__c), DATEVALUE(InstallDate__c) - DATEVALUE(CreatedDate), NULL)</formula>
    <label>Dias Criação → Obra Agendada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>