force-app/main/default/objects/Instalacao__c/fields/DiasDeExecucao__c.field-meta.xml
<CustomField>
	<fullName>DiasDeExecucao__c</fullName>
	<description
  >Tempo em dias corridos entre o início da Obra em Execução e a Conclusão da Obra (aguardando troca de medidor). Depende de DataObraEmExecucao__c e DataConclusao__c. Usado no indicador Tempo Médio de Execução de Instalações (Engenharia).</description>
	<formula
  >IF(!ISBLANK(DataConclusao__c) &amp;&amp; !ISBLANK(DataObraEmExecucao__c), DataConclusao__c - DataObraEmExecucao__c, NULL)</formula>
	<label>Dias Execução → Conclusão</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>