force-app/main/default/objects/Instalacao__c/fields/ElaborarLaudoPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>ElaborarLaudoPlanejamento__c</fullName>
    <description>Status da elaboração de laudo no checklist de planejamento.</description>
    <label>Elaborar Laudo (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>