force-app/main/default/objects/Instalacao__c/fields/EnvioNotasConfirmado__c.field-meta.xml
<CustomField>
    <fullName>EnvioNotasConfirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirma que as notas foram enviadas para pagamento do integrador.</description>
    <label>Envio de Notas Confirmado</label>
    <type>Checkbox</type>
</CustomField>