force-app/main/default/objects/Instalacao__c/fields/ExecutivoPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>ExecutivoPlanejamento__c</fullName>
    <description>Status do executivo no checklist de planejamento.</description>
    <label>Executivo (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>