force-app/main/default/objects/Instalacao__c/fields/GestorObra__c.field-meta.xml
<CustomField>
    <fullName>GestorObra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gestor responsável pela instalação.</description>
    <label>Gestor da Obra</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InstalacoesGestor</relationshipName>
    <type>Lookup</type>
</CustomField>