force-app/main/default/objects/Instalacao__c/fields/Integrador__c.field-meta.xml
<CustomField>
    <fullName>Integrador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrador</label>
    <referenceTo>Integradores__c</referenceTo>
    <relationshipLabel>Instalações</relationshipLabel>
    <relationshipName>InstalacoesIntegrador</relationshipName>
    <type>Lookup</type>
</CustomField>