force-app/main/default/objects/Instalacao__c/fields/IntegradorEstado__c.field-meta.xml
<CustomField>
    <fullName>IntegradorEstado__c</fullName>
    <formula>Integrador__r.Estado__c</formula>
    <label>Estado (Integrador)</label>
    <type>Text</type>
</CustomField>