force-app/main/default/objects/Instalacao__c/fields/IntegradorMunicipio__c.field-meta.xml
<CustomField>
    <fullName>IntegradorMunicipio__c</fullName>
    <formula>Integrador__r.Cidade__c</formula>
    <label>Município (Integrador)</label>
    <type>Text</type>
</CustomField>