force-app/main/default/objects/Instalacao__c/fields/IntegradorPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>IntegradorPlanejamento__c</fullName>
    <description>Status do integrador no checklist de planejamento.</description>
    <label>Integrador (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>