force-app/main/default/objects/Instalacao__c/fields/IntegradorTelefone__c.field-meta.xml
<CustomField>
    <fullName>IntegradorTelefone__c</fullName>
    <formula>Integrador__r.Telefone__c</formula>
    <label>Telefone (Integrador)</label>
    <type>Text</type>
</CustomField>