force-app/main/default/objects/Instalacao__c/fields/ListaComplementarPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>ListaComplementarPlanejamento__c</fullName>
    <description>Status da lista complementar no checklist de planejamento.</description>
    <label>Lista Complementar (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>