force-app/main/default/objects/Instalacao__c/fields/NumeroSolicitacaoSAP__c.field-meta.xml
<CustomField>
    <fullName>NumeroSolicitacaoSAP__c</fullName>
    <description>Número da solicitação de compra no SAP.</description>
    <label>Número Solicitação SAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>