force-app/main/default/objects/Instalacao__c/fields/ObservacaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoPagamento__c</fullName>
    <description>Observações adicionais sobre o pagamento do integrador e notas.</description>
    <label>Observação do Pagamento</label>
    <type>TextArea</type>
</CustomField>