force-app/main/default/objects/Instalacao__c/fields/OportunidadeConcluida__c.field-meta.xml
<CustomField>
    <fullName>OportunidadeConcluida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para obter a oportunidade concluída.</description>
    <label>Oportunidade Concluída</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Instalações</relationshipLabel>
    <relationshipName>Instalacoes</relationshipName>
    <type>Lookup</type>
</CustomField>