force-app/main/default/objects/Instalacao__c/fields/PagamentoEtapa__c.field-meta.xml
<CustomField>
    <fullName>PagamentoEtapa__c</fullName>
    <description>Identifica a etapa à qual o pagamento do integrador se refere.</description>
    <label>Etapa do Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planejamento de Obra</fullName>
                <default>true</default>
                <label>Planejamento de Obra</label>
            </value>
            <value>
                <fullName>Execucao de Obra</fullName>
                <label>Execução de Obra</label>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
        <valueSetName xsi:nil="true"/>
    </valueSet>
</CustomField>