force-app/main/default/objects/Instalacao__c/fields/PagamentoNumero__c.field-meta.xml
<CustomField>
    <fullName>PagamentoNumero__c</fullName>
    <description>Sequência/identificação da parcela de pagamento do integrador.</description>
    <label>Parcela do Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1a Parcela - Planejamento de Obra</fullName>
                <default>true</default>
                <label>1ª Parcela - Planejamento de Obra</label>
            </value>
            <value>
                <fullName>2a Parcela - Execucao de Obra</fullName>
                <label>2ª Parcela - Execução de Obra</label>
            </value>
            <value>
                <fullName>Parcela Adicional - Financeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>