force-app/main/default/objects/Instalacao__c/fields/PrazoExecucaoServico__c.field-meta.xml
<CustomField>
    <fullName>PrazoExecucaoServico__c</fullName>
    <label>Prazo Execução do Serviço (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>