force-app/main/default/objects/Instalacao__c/fields/PrecoPorInversor__c.field-meta.xml
<CustomField>
    <fullName>PrecoPorInversor__c</fullName>
    <label>Preço por Inversor (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>