force-app/main/default/objects/Instalacao__c/fields/PrecoPorModulo__c.field-meta.xml
<CustomField>
    <fullName>PrecoPorModulo__c</fullName>
    <label>Preço por Módulo (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>