force-app/main/default/objects/Instalacao__c/fields/PrestadorDeServico__c.field-meta.xml
<CustomField>
    <fullName>PrestadorDeServico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestador de Serviço</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instalações por Prestador</relationshipLabel>
    <relationshipName>InstalacoesPrestador</relationshipName>
    <type>Lookup</type>
</CustomField>