force-app/main/default/objects/Instalacao__c/fields/PrestadorEstado__c.field-meta.xml
<CustomField>
    <fullName>PrestadorEstado__c</fullName>
    <label>Estado do Integrador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>