force-app/main/default/objects/Instalacao__c/fields/PrestadorMunicipio__c.field-meta.xml
<CustomField>
    <fullName>PrestadorMunicipio__c</fullName>
    <label>Município do Integrador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>