force-app/main/default/objects/Instalacao__c/fields/PrestadorTelefone__c.field-meta.xml
<CustomField>
    <fullName>PrestadorTelefone__c</fullName>
    <label>Telefone do Integrador</label>
    <length>40</length>
    <type>Text</type>
</CustomField>