force-app/main/default/objects/Instalacao__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipName>Instalacoes</relationshipName>
    <type>Lookup</type>
</CustomField>