force-app/main/default/objects/Instalacao__c/fields/SolicitarNovaAtividadePagamento__c.field-meta.xml
<CustomField>
    <fullName>SolicitarNovaAtividadePagamento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o usuário solicita abertura de nova atividade de pagamento após esta.</description>
    <label>Solicitar Nova Atividade de Pagamento</label>
    <type>Checkbox</type>
</CustomField>