force-app/main/default/objects/Instalacao__c/fields/SolicTrafoPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>SolicTrafoPlanejamento__c</fullName>
    <description>Status da solicitação de trafo no checklist de planejamento.</description>
    <label>Solicitação de Trafo (Planejamento)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>