force-app/main/default/objects/Instalacao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status da Instalação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planejamento de Obra</fullName>
                <default>true</default>
                <label>Planejamento de Obra</label>
            </value>
            <value>
                <fullName>Obra agendada</fullName>
            </value>
            <value>
                <fullName>Obra em execução</fullName>
            </value>
            <value>
                <fullName>Obra concluída - Aguardando troca de medidor</fullName>
            </value>
            <value>
                <fullName>Aguardando vistoria</fullName>
            </value>
            <value>
                <fullName>Ligação solicitada</fullName>
            </value>
            <value>
                <fullName>Usina operando</fullName>
            </value>
            <value>
                <fullName>Obra concluída</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>