force-app/main/default/objects/Instalacao__c/fields/TipoPrestadorServico__c.field-meta.xml
<CustomField>
    <fullName>TipoPrestadorServico__c</fullName>
    <label>Tipo do Prestador de Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrador</fullName>
                <default>true</default>
                <label>Integrador</label>
            </value>
            <value>
                <fullName>Prestador de Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>