force-app/main/default/objects/Instalacao__c/fields/TotalInstalacaoPrestador__c.field-meta.xml
<CustomField>
    <fullName>TotalInstalacaoPrestador__c</fullName>
    <label>Total Instalação (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>