force-app/main/default/objects/Instalacao__c/fields/ValorInstalacaoPlanejado__c.field-meta.xml
<CustomField>
    <fullName>ValorInstalacaoPlanejado__c</fullName>
    <formula>0.8 * BLANKVALUE(
    IF(
        NOT(ISBLANK(Oportunidade__c)),
        Oportunidade__r.ValorInstalacao__c,
        OportunidadeConcluida__r.ValorInstalacao__c
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Instalação Planejado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>