force-app/main/default/objects/Instalacao__c/fields/ValorInstalacaoRealizado__c.field-meta.xml
<CustomField>
    <fullName>ValorInstalacaoRealizado__c</fullName>
    <label>Valor Instalação Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>