force-app/main/default/objects/Instalacao__c/fields/ValorMaterialComplementarPlanejado__c.field-meta.xml
<CustomField>
    <fullName>ValorMaterialComplementarPlanejado__c</fullName>
    <formula>0.8 * BLANKVALUE(
    IF(
        NOT(ISBLANK(Oportunidade__c)),
        Oportunidade__r.CustoAdicionalFixo__c,
        OportunidadeConcluida__r.CustoAdicionalFixo__c
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Material Complementar Planejado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>