force-app/main/default/objects/Instalacao__c/fields/ValorMaterialComplementarRealizado__c.field-meta.xml
<CustomField>
    <fullName>ValorMaterialComplementarRealizado__c</fullName>
    <label>Valor Material Complementar Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>