force-app/main/default/objects/Instalacao__c/fields/WorkDeliveryReportContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>WorkDeliveryReportContentDocumentId__c</fullName>
    <label>Relatório de Entrega (ContentDocumentId)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>