force-app/main/default/objects/Instalacao__c/fields/WorkDeliveryReportGenerated__c.field-meta.xml
<CustomField>
    <fullName>WorkDeliveryReportGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relatório de Entrega Gerado</label>
    <type>Checkbox</type>
</CustomField>