force-app/main/default/objects/Instalacao__c/fields/WorkDeliveryReportLastError__c.field-meta.xml
<CustomField>
    <fullName>WorkDeliveryReportLastError__c</fullName>
    <label>Relatório de Entrega - Último Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>