force-app/main/default/objects/Instalacao__c/validationRules/Oportunidade_Must_Match_Projeto.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_Must_Match_Projeto</fullName>
    <active>false</active>
    <description>Garante consistência entre Oportunidade da instalação e Oportunidade do projeto, com bypass para perfil administrador (EN/PT-BR).</description>
    <errorConditionFormula>AND(
NOT(
OR(
LOWER($Profile.Name) = &quot;system administrator&quot;,
LOWER($Profile.Name) = &quot;administrador do sistema&quot;
)
),
AND(
NOT(ISBLANK(Oportunidade__c)),
NOT(ISBLANK(Projeto__c)),
Oportunidade__c &lt;&gt; Projeto__r.Oportunidade__c
)
)</errorConditionFormula>
    <errorMessage>A Oportunidade da Instalação deve ser a mesma Oportunidade do Projeto.</errorMessage>
</ValidationRule>