force-app/main/default/objects/Instalacao__c/validationRules/Require_Projeto.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Projeto</fullName>
    <active>false</active>
    <description>Impede instalação sem projeto associado, com bypass para perfil administrador (EN/PT-BR).</description>
    <errorConditionFormula>AND(
NOT(
OR(
LOWER($Profile.Name) = &quot;system administrator&quot;,
LOWER($Profile.Name) = &quot;administrador do sistema&quot;
)
),
ISBLANK(Projeto__c)
)</errorConditionFormula>
    <errorMessage>A Instalação deve estar vinculada a um Projeto.</errorMessage>
</ValidationRule>